// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas para <GiftExpertApp /> Debe de mostrarse ua lista de categorias 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="AC/DC"
    key="AC/DC"
  />
  <GifGrid
    category="Metallica"
    key="Metallica"
  />
</Fragment>
`;

exports[`Pruebas para <GiftExpertApp /> Prueba que GiftExpertApp se renderice correctamente 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
